<resources>
    <string name="app_name" translatable="false">Be Frugal</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_items">Items in the list</string>
    <string name="list_name">List Name</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_list">Delete List</string>
    <string name="update_list_name">Update List Name</string>
    <string name="delete_confirmation">Do you really want to delete %s?</string>

    <!-- Snackbar Messages -->
    <string name="add_snackbar">%s has been added successfully.</string>
    <string name="update_snackbar">%1$s has been updated successfully to %2$s.</string>
    <string name="delete_snackbar">%s has been deleted successfully.</string>

    <!-- List item detail -->
    <string name="title_activity_list_item_detail">Item Detail</string>
    <string name="item_name">Item Name</string>
    <string name="total_amount">Total Amount</string>
    <string name="bought_qty">Bought Quantity</string>
    <string name="unit_type">Unit Type</string>
    <string name="unit_amount">Unit Amount</string>

    <!-- Errors -->
    <string name="error_list_name_empty">Error: List name cannot be empty!</string>
    <string name="error_list_item_name_empty">Error: List item name cannot be empty!</string>
    <string name="done">Done</string>
    <string name="not_available">N/A</string>
    <string name="delete_item">Delete Item</string>
    <string name="place_name">Where do you buy from?</string>
    <string name="google_logo" translatable="false">Google Logo</string>
    <string name="place_label">Place</string>
    <string name="action_play">Play</string>


</resources>