<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.oguzcam.befrugal.ListItemDetailActivityFragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="55dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/boughtQty"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/bought_qty"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="55dp"
        android:id="@+id/unitType"
        android:layout_toEndOf="@id/boughtQty"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:padding="@dimen/activity_vertical_margin"
        android:id="@+id/unitAmount"
        android:layout_below="@+id/unitType"
        android:layout_alignParentStart="true"
        android:hint="@string/unit_amount"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:padding="@dimen/activity_vertical_margin"
        android:id="@+id/totalAmount"
        android:layout_below="@+id/unitAmount"
        android:layout_alignParentEnd="true"
        android:hint="@string/total_amount"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/done"/>
</RelativeLayout>
