<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/listPreferredItemHeight"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_title"
        android:text="@string/add"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_unit_amount"
        android:layout_below="@id/list_item_title"
        android:layout_alignParentEnd="true"
        android:text="@string/add"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_unit_amount_label"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:layout_below="@id/list_item_title"
        android:layout_toStartOf="@id/list_item_unit_amount"
        android:text="@string/unit_amount"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/place_name"
        android:layout_below="@id/list_item_unit_amount_label"
        android:layout_alignParentEnd="true"
        android:text="@string/add"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/place_label"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:layout_below="@id/list_item_unit_amount_label"
        android:layout_toStartOf="@id/place_name"
        android:text="@string/place_label"
        android:textColor="@android:color/darker_gray"/>

</RelativeLayout>
